# labs-kpiyap

./: .gitignore  LICENSE
course-work/: course-work.sln
course-work/course-work/: Date.cpp  Date.h  Group.cpp  Group.h  Human.cpp  Human.h  Marks.cpp  Marks.h  Name.cpp  Name.h  Student.cpp  Student.h  StudentInfo.cpp  StudentInfo.h  Teacher.h  TeacherInfo.cpp  TeacherInfo.h  course-work.cpp  course-work.vcxproj  course-work.vcxproj.filters
lab1/: lab1.sln
lab1/lab1/: classes.cpp  classes.h  lab1.cpp  lab1.vcxproj  lab1.vcxproj.filters
lab10/: CMakeLists.txt  lab1  lab10  lab10.cpp  lab10.sln  main.cpp
lab10/lab10/: lab10.cpp  lab10.vcxproj
lab11/: lab11.sln
lab11/lab11/: Architect.cpp  Architect.h  ArchitectureObject.cpp  ArchitectureObject.h  ClassDiagram.cd  Coordinates.cpp  Coordinates.h  Flat.cpp  Flat.h  Floor.cpp  Floor.h  House.cpp  House.h  lab11.cpp  lab11.vcxproj  lab11.vcxproj.filters
lab12/: input.txt  lab12.cpp  lab12.sln  lab12.vcxproj  output.txt
lab2/: lab2.sln
lab2/lab2/: String.cpp  String.h  classes.h  lab2.vcxproj  lab2.vcxproj.filters
lab2fix/: lab2fix.sln
lab3/: CMakeLists.txt  CharArray.cpp  CharArray.h
lab5/: CMakeLists.txt  main.cpp
lab5/headers/: CircularSaw.h  ElectricJigSaw.h  ElectricSaw.h  Jigsaw.h  Saw.h  Tool.h
lab5/sources/: CircularSaw.cpp  ElectricJigSaw.cpp  ElectricSaw.cpp  Jigsaw.cpp  Saw.cpp  Tool.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt  main.cpp
lab9/: CMakeLists.txt  detail.txt  lab9  lab9.cpp  lab9.sln  lab9.vcxproj  main.cpp
(+5 files in other folders)
